Generell gjennomgang av stabilitet og feilhåndtering i exchange modul.
git-svn-id: https://subversion.kantega.no/svn/aksess/projects/aksess-modules/trunk@10257 497bca9e-fae7-0310-9681-f2327195b1a6